--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,36 @@
 		flex:33.33%;
 	}
 }
+
+
+.XjzKX {
+   margin: 0px 500px 0px 500px;
+}
+.circle {
+    border-radius: 50%;
+    padding:5px;
+    border:2px solid black;
+
+
+}
+.position {
+    margin-left: 800px;
+    position: absolute;
+    bottom: 750px;
+
+}
+.-vDIg {
+    margin-left: 800px;
+    position: absolute;
+    bottom: 500px;
+
+}
+.k9GMp {
+    margin-bottom: 20px;
+}
+.tag{
+    position: absolute;
+    top: 470px;
+    margin-left: 900px;
+}
+
